--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,29 +1,35 @@
+---
 default_language_version:
     python: python3.9
 repos:
--   repo: https://github.com/psf/black
-    rev: 21.12b0
-    hooks:
-    - id: black
-      args:
-          - --line-length=120
+    - repo: https://github.com/psf/black
+      rev: 21.12b0
+      hooks:
+          - id: black
+            args:
+                - --line-length=120
 
--   repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
-    hooks:
-    - id: flake8
-      args:
-        - --ignore=D100, D103, D101
-        - --max-line-length=120
+    - repo: https://github.com/PyCQA/flake8
+      rev: 4.0.1
+      hooks:
+          - id: flake8
+            args:
+                - --ignore=D100, D103, D101
+                - --max-line-length=120
 
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: check-added-large-files
-    -   id: requirements-txt-fixer
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-merge-conflict
-    -   id: check-json
-    -   id: check-executables-have-shebangs
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.1.0
+      hooks:
+          - id: trailing-whitespace
+          - id: check-added-large-files
+          - id: requirements-txt-fixer
+          - id: end-of-file-fixer
+          - id: check-yaml
+          - id: check-merge-conflict
+          - id: check-json
+          - id: check-executables-have-shebangs
+
+    - repo: https://github.com/adrienverge/yamllint.git
+      rev: v1.17.0
+      hooks:
+          - id: yamllint
